@@ -15,6 +15,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
 import de.highbyte_le.weberknecht.request.ContentProcessingException;
+import de.highbyte_le.weberknecht.request.ExecutionException;
 import de.highbyte_le.weberknecht.request.actions.ExecutableAction;
 import de.highbyte_le.weberknecht.request.routing.RoutingTarget;
 
@@ -47,7 +48,7 @@ public class ProcessingChain {
 	/**
 	 * Continue processing. Returns after all processors are done. Which allows cleanup operations. 
 	 */
-	public void doContinue() throws ProcessingException, ContentProcessingException, RedirectException {
+	public void doContinue() throws ExecutionException, ContentProcessingException, RedirectException {
 		if (it.hasNext()) {
 			it.next().execute(request, response, routingTarget, action, this);
 		}
